--- a/app/src/main/res/drawable-v24/cornerbtn.xml
+++ b/app/src/main/res/drawable-v24/cornerbtn.xml
@@ -2,5 +2,5 @@
 <shape android:shape="rectangle"  xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="8dp"/>
-    <solid android:color="#0362fc"/>
+    <solid android:color="#1483FF"/>
 </shape>
