--- a/app/src/main/res/layout/activity_category_product.xml
+++ b/app/src/main/res/layout/activity_category_product.xml
@@ -34,6 +34,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:visibility="gone"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/imgcircle"
