--- a/app/src/main/res/layout/mealslist.xml
+++ b/app/src/main/res/layout/mealslist.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:paddingVertical="8dp"
     android:background="@drawable/homebtn1"
     android:elevation="10dp"
     android:layout_marginVertical="10dp"
@@ -17,9 +18,9 @@
         android:src="@drawable/ic_baseline_lunch_dining_24"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginHorizontal="4dp"
         android:orientation="vertical">
 
         <TextView
@@ -29,17 +30,17 @@
             android:text="Breakfast"
             android:id="@+id/mealtitle"
             android:textColor="#000000"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:fontFamily="@font/nunitobold"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="4dp"
             android:id="@+id/mealdesc"
-            android:textSize="14dp"
+            android:textSize="12sp"
             android:textColor="#000000"
-            android:fontFamily="@font/nunitobold"
+            android:fontFamily="@font/nunitoregular"
             android:lineSpacingExtra="4dp"
             android:text="Strawberry, Peach &amp;\nAlmond Milk Smoothie"/>
 
